force-app/main/default/objects/Modello_Macchina__c/Modello_Macchina__c.object-meta.xml
<CustomObject>
    <label>Modello Macchina</label>
    <nameField>
        <label>Codice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modello Macchine</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>