force-app/main/default/objects/Modello_Macchina__c/fields/Codice__c.field-meta.xml
<CustomField>
    <fullName>Codice__c</fullName>
    <externalId>true</externalId>
    <label>Codice</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>