force-app/main/default/objects/Modello_Macchina__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <label>Descrizione</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>