force-app/main/default/objects/Modello_Macchina__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Modello Macchine</relationshipLabel>
    <relationshipName>Modello_Macchine</relationshipName>
    <type>Lookup</type>
</CustomField>