force-app/main/default/objects/Modello_Macchina__c/fields/Tipo_Macchina__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Macchina__c</fullName>
    <externalId>true</externalId>
    <label>Tipo Macchina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>